--- a/style_default.css
+++ b/style_default.css
@@ -1,65 +1,33 @@
-/* I don't want any fancy fonts. 3: */
+@import url(http://fonts.googleapis.com/css?family=Oxygen+Mono);
+@import url(http://fonts.googleapis.com/css?family=Oxygen);
 
-body {
-	font-family:Arial;
-	background-color:#000;
-	color:#FFF;
+
+html {
+	font-family: "Oxygen", Arial, sans-serif;
+	color: white;
+	background-color: black;
 }
 
 input, textarea, select {
-	background-color:#000000;
+	background-color: #000000;
 }
 
 p, #input_guest_name, #input_message {
-	font-family:Arial, sans-serif;
+	font-family: "Oxygen Mono", Arial, sans-serif;
 }
 
 p.message_content {
-	font-size:15px;
+	font-size: 14px;
 }
 
 p.message_info {
-	font-size:15px;
+	font-size: 10px;
 }
 
 p.nobr {
-	display:inline;
+	display: inline;
 }
 
-#message_container {
-	position:absolute;
-	left:50%;
-	width:600px;
-	margin-left:-300px;
-	background-color:#555;
-	border-radius:10px;
-	box-shadow:0 0 7px -2px #FFF;
-}
+#shout_container {
 
-#message_container .message_info {
-	display:none;
-}
-
-#message_container .message_content {
-	border:1px solid #FFF;
-	margin:3px 5px;
-	padding:2px;
-	background-color:rgba(0,0,0,0.4);
-	border-radius:4px;
-	animation:newmessage 1s;
-	transform-origin:25% 50%;
-}
-
-@keyframes newmessage
-{
-	0%
-	{
-		transform:scale(0.6);
-		opacity:0;
-	}
-	100%
-	{
-		transform:scale(1);
-		opacity:1;
-	}
 }
